画像パスの変更

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -160,34 +160,34 @@
      <section class="block-body">
       <div class="row">
        <div class="col-sm-4">
-        <a href="#" class="recent-work" style="background-image:url(assets/public/public/images/rain_1-320x240.jpg)">
+        <a href="#" class="recent-work" style="background-image:url(/images/rain_1-320x240.jpg)">
          <span class="btn btn-o-white">Lorem Rocks</span>
         </a>
        </div>
        <div class="col-sm-4">
-        <a href="#" class="recent-work" style="background-image:url(assets/public/public/images/min_icons_thumb1-320x240.jpg)">
+        <a href="#" class="recent-work" style="background-image:url(/images/min_icons_thumb1-320x240.jpg)">
          <span class="btn btn-o-white">Lorem Rocks</span>
         </a>
        </div>
        <div class="col-sm-4">
-        <a href="#" class="recent-work" style="background-image:url(assets/public/public/images/flat_icons_thumb.jpg)">
+        <a href="#" class="recent-work" style="background-image:url(/images/flat_icons_thumb.jpg)">
          <span class="btn btn-o-white">Lorem Rocks</span>
         </a>
        </div>
       </div>
       <div class="row">
        <div class="col-sm-4">
-        <a href="#" class="recent-work" style="background-image:url(assets/public/public/images/wood-320x240.jpg)">
+        <a href="#" class="recent-work" style="background-image:url(/images/wood-320x240.jpg)">
          <span class="btn btn-o-white">Lorem Rocks</span>
         </a>
        </div>
        <div class="col-sm-4">
-        <a href="#" class="recent-work" style="background-image:url(assets/public/public/images/bike-320x240.jpg)">
+        <a href="#" class="recent-work" style="background-image:url(/images/bike-320x240.jpg)">
          <span class="btn btn-o-white">Lorem Rocks</span>
         </a>
        </div>
        <div class="col-sm-4">
-        <a href="#" class="recent-work" style="background-image:url(assets/public/public/images/six_1-320x240.jpg)">
+        <a href="#" class="recent-work" style="background-image:url(/images/six_1-320x240.jpg)">
          <span class="btn btn-o-white">Lorem Rocks</span>
         </a>
        </div>
@@ -249,21 +249,21 @@
      <section class="block-body">
       <div class="row">
        <div class="col-sm-4 blog-post">
-        <img src="assets/public/images/bike_water1-1000x600.jpg">
+        <img src="/images/bike_water1-1000x600.jpg">
         <a href="#"><h2>Design Your Mind</h2></a>
         <div class="date">3 Nov, 2014</div>
         <p>In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
         <a href="">Read More</a>
        </div>
        <div class="col-sm-4 blog-post">
-        <img src="assets/public/images/mac_glasses1-1000x600.jpg">
+        <img src="/images/mac_glasses1-1000x600.jpg">
         <a href="#"><h2>Winter Is Comming</h2></a>
         <div class="date">3 Nov, 2014</div>
         <p>In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
         <a href="">Read More</a>
        </div>
        <div class="col-sm-4 blog-post">
-        <img src="assets/public/images/road-1000x600.jpg">
+        <img src="/images/road-1000x600.jpg">
         <a href="#"><h2>The Illustration</h2></a>
         <div class="date">3 Nov, 2014</div>
         <p>In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
@@ -307,7 +307,7 @@
           <div class="carousel-inner" role="listbox">
             <div class="item active">
                <div class="img-center">
-                <img class="img-circle circular-img" src="assets/public/images/01_200x200.png">
+                <img class="img-circle circular-img" src="/images/01_200x200.png">
                </div> 
                <h3>
                 Create a website that you are gonna be proud of. Be it Business, Portfolio, Photography, eCommerce & much more.
@@ -316,7 +316,7 @@
             </div><!-- /.item -->
             <div class="item">
              <div class="img-center">
-                <img class="img-circle circular-img" src="assets/public/images/02_200x200.png">
+                <img class="img-circle circular-img" src="/images/02_200x200.png">
                </div>
                 <h3>
                  Create a website that you are gonna be proud of. Be it Business, Portfolio, Photography, eCommerce & much more.
@@ -325,7 +325,7 @@
             </div><!-- /.item -->
             <div class="item">
              <div class="img-center">
-                <img class="img-circle circular-img" src="assets/public/images/03_200x200.png">
+                <img class="img-circle circular-img" src="/images/03_200x200.png">
                 </div>
                 <h3>
                  Create a website that you are gonna be proud of. Be it Business, Portfolio, Photography, eCommerce & much more.
