--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,52 @@
     <title>BootstrapApp</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <!-- meta -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"/>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <!-- google fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Raleway:500,300' rel='stylesheet' type='text/css'>
+    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=PT+Sans'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Serif:regular,bold"/>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <%= yield %>
   </body>
+  <script type="text/javascript">
+  jQuery(document).ready(function($){
+
+      $(window).scroll(function() {
+      
+      console.log("asdf");
+
+    if ($(window).scrollTop() > 100 ){
+      
+      $('.top-header').addClass('shows');
+      
+      } else {
+      
+        $('.top-header').removeClass('shows');
+      
+      };    
+    });
+
+    });
+
+  jQuery('.scroll').on('click', function(e){  
+    e.preventDefault()
+      
+    jQuery('html, body').animate({
+        scrollTop : jQuery(this.hash).offset().top
+      }, 1500);
+  });
+
+
+  </script>
+
 </html>
